# CFD-Solver-2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Obsidian/: Changelog.md  Decisions.md
include/: Config.hpp  Mesh.hpp  Solver.hpp
models/: .gitignore
output/: .gitignore
src/: Config.cpp  Mesh.cpp  Solver.cpp  main.cpp
