cmake_minimum_required(VERSION 3.10)
project(AeroFlow VERSION 0.1)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(include)
set(SFML_DIR "lib/sfml/lib/cmake/SFML")
find_package(SFML 3.0 COMPONENTS graphics window system REQUIRED)
target_include_directories(CFD-Solver-2D PRIVATE include)
target_link_libraries(CFD-Solver-2D PRIVATE sfml-graphics sfml-window sfml-system)
add_executable(CFD-Solver-2D src/main.cpp)
